--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Frontend Environment Variables
 
 # API Backend URL
-VITE_API_URL=http://localhost:8000
+VITE_API_URL=https://fastapi-backend-j45v.onrender.com/
 
 # App Configuration
 VITE_APP_NAME=FinanceBot
