--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,10 @@
 # Database Configuration
 # For PostgreSQL in production:
 # DATABASE_URL=postgresql://username:password@localhost:5432/financebot
+DATABASE_URL=postgresql://finbot_user:cobWsVmqSkJ1l4rWe50Rkia8D9jFW9T5@dpg-d26jd6re5dus73b6d120-a.oregon-postgres.render.com/finbot_db
 
 # For SQLite in development (default):
-DATABASE_URL=sqlite:///./financebot.db
+#DATABASE_URL=sqlite:///./financebot.db
 
 # Security
 SECRET_KEY=your-secret-key-change-in-production-use-openssl-rand-hex-32
@@ -11,4 +12,4 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # CORS (add your frontend URL in production)
-FRONTEND_URL=http://localhost:8080
+FRONTEND_URL=https://personal-finbot.vercel.app/
